# Helix

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_CHECKLIST.md  DEMO_SCRIPT.md  DEPLOYMENT.md  FEATURES.md  FUTURE_ROADMAP.md  JUDGE_QNA.md  PITCH_CONTENT.md  README.md  RELEASE_CHECKLIST.md  SUBMISSION.md  TECH_STACK.md  docker-compose.yml  old_login.tsx  strict_audit_results.txt  test_red_team.db-shm  test_red_team.db-wal  test_verify.db  test_verify_fireworks.db-shm  test_verify_fireworks.db-wal
backend/: .dockerignore  Dockerfile  org_tree.txt  pyproject.toml  requirements.txt  src_tree.txt
backend/alembic/: env.py
backend/alembic/versions/: f472e207f1a7_init_pgvector.py
backend/docs/architecture/: ADR-001-storage-provider.md  ADR-002-organization-memory.md  ADR-003-ingestion.md  ADR-004-runtime-boundaries.md
backend/organization_data/: README.md
backend/organization_data_legacy/: organization_structure.md
backend/organization_seed/: README.md
backend/scripts/: extract_knowledge.py  fix_user.py  seed_apex_precision.py  seed_canonical.py  test_embeddings.py  test_ingestion.py  test_intelligence.py  test_retrieval.py
backend/src/: __init__.py  main.py
backend/src/ai_runtime/: __init__.py  citation_validator.py  cost_optimizer.py  evaluation_engine.py  models.py  observability.py  policy_engine.py  prompt_engine.py  retrieval_engine.py  router.py  runtime.py  schemas.py  service.py
backend/src/api/: dependencies.py
backend/src/assets/: models.py  router.py  schemas.py  service.py
backend/src/auth/: models.py  (+3 more)
backend/tests/: conftest.py
(+328 files in other folders)
