[project]
name = "helix-backend"
version = "0.1.0"
description = "Project Helix — EvidenceOps Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.4.2",
    "minio>=7.2.20",
    "PyJWT>=2.13.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0,<5.0",
    "openai>=1.0",
    "httpx>=0.27",
    "weasyprint>=69.0",
    "jinja2>=3.1",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "langchain-text-splitters>=0.2",
    "sentence-transformers>=3.0",
    "redis>=5.0",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "faker>=25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
